parser.out
Created by PLY version 3.6 (http://www.dabeaz.com/ply)

Unused terminals:

    KEYS
    COMMENT

Grammar

Rule 0     S' -> statementTop
Rule 1     statementTop -> END
Rule 2     statementTop -> statement
Rule 3     statement -> declaration statementTop
Rule 4     statement -> expression statementTop
Rule 5     statement -> IfThenElse statementTop
Rule 6     statement -> AssignmentHead statementTop
Rule 7     statement -> WhileLoop statementTop
Rule 8     statement -> ForLoop statementTop
Rule 9     statement -> typeCastToInt statementTop
Rule 10    statement -> typecastToFloat statementTop
Rule 11    statement -> FunctionDefinition statementTop
Rule 12    statement -> FunctionCall statementTop
Rule 13    statement -> returnDec statementTop
Rule 14    statement -> stringOpStatement statementTop
Rule 15    statement -> listOPStatement statementTop
Rule 16    statement -> READ LPAREN IDENTIFIER RPAREN SEMICOLON statementTop
Rule 17    statement -> PRINT LPAREN content RPAREN SEMICOLON statementTop
Rule 18    statement1 -> declaration
Rule 19    statement1 -> expression
Rule 20    statement1 -> IfThenElse
Rule 21    statement1 -> AssignmentHead
Rule 22    statement1 -> WhileLoop
Rule 23    statement1 -> ForLoop
Rule 24    statement1 -> typeCastToInt
Rule 25    statement1 -> typecastToFloat
Rule 26    statement1 -> FunctionDefinition
Rule 27    statement1 -> FunctionCall
Rule 28    statement1 -> returnDec
Rule 29    statement1 -> stringOpStatement
Rule 30    statement1 -> listOPStatement statementTop
Rule 31    statement1 -> READ LPAREN IDENTIFIER RPAREN SEMICOLON
Rule 32    statement1 -> PRINT LPAREN content RPAREN SEMICOLON
Rule 33    content -> toPrint morePrint
Rule 34    morePrint -> PLUS toPrint morePrint
Rule 35    morePrint -> EMPTY
Rule 36    toPrint -> STRINGVALUE
Rule 37    toPrint -> CONSTANT
Rule 38    toPrint -> IDENTIFIER
Rule 39    declaration -> identifierDeclaration
Rule 40    declaration -> listDec
Rule 41    identifierDeclaration -> BAR dataType IDENTIFIER BAR SEMICOLON
Rule 42    identifierDeclaration -> BAR dataType IDENTIFIER LBRACK CONSTANT RBRACK BAR SEMICOLON
Rule 43    identifierDeclaration -> BAR dataType IDENTIFIER LBRACK CONSTANT RBRACK EQUAL expression BAR SEMICOLON
Rule 44    identifierDeclaration -> BAR dataType IDENTIFIER EQUAL expression BAR SEMICOLON
Rule 45    dataType -> INT
Rule 46    dataType -> BOOLEAN
Rule 47    dataType -> FLOAT
Rule 48    stringOpStatement -> IDENTIFIER stringOp LPAREN STRING RPAREN SEMICOLON
Rule 49    stringOpStatement -> IDENTIFIER stringOp LPAREN IDENTIFIER RPAREN SEMICOLON
Rule 50    listOPStatement -> IDENTIFIER INSERT LPAREN CONSTANT COMMA validListUnionValues RPAREN SEMICOLON
Rule 51    listOPStatement -> IDENTIFIER POP LPAREN listOpChoice RPAREN SEMICOLON
Rule 52    listOpChoice -> CONSTANT
Rule 53    listOpChoice -> EMPTY
Rule 54    stringOp -> SPLIT
Rule 55    stringOp -> STRIP
Rule 56    stringOp -> CONCAT
Rule 57    stringOp -> COPY
Rule 58    listDec -> BAR IDENTIFIER EQUAL list BAR SEMICOLON
Rule 59    list -> LBRACK listElem RBRACK
Rule 60    listElem -> validListUnionValues
Rule 61    listElem -> validListUnionValues COMMA listElem
Rule 62    listElem -> EMPTY
Rule 63    listEval -> IDENTIFIER LISTVALUE
Rule 64    validListUnionValues -> CONSTANT
Rule 65    validListUnionValues -> FLOATVALUE
Rule 66    validListUnionValues -> booleanValue
Rule 67    validListUnionValues -> STRINGVALUE
Rule 68    validListUnionValues -> LISTVALUE
Rule 69    typeCastToInt -> TC_INT IDENTIFIER SEMICOLON
Rule 70    typecastToFloat -> TC_FLOAT IDENTIFIER SEMICOLON
Rule 71    WhileLoop -> WHILE Condition COLON Body
Rule 72    Body -> statementMore
Rule 73    statementMore -> statementMoreCont
Rule 74    statementMore -> END
Rule 75    statementMoreCont -> statement1 statementMore
Rule 76    ForLoop -> for LPAREN AssignmentHead Condition Increment RPAREN Body
Rule 77    Increment -> SEMICOLON Operand Options
Rule 78    Options -> Iterator
Rule 79    Options -> AssignmentOperator Operand
Rule 80    IfThenElse -> IF Condition Body addElif
Rule 81    addElif -> addElif2
Rule 82    addElif -> FI
Rule 83    addElif -> ELSE Body
Rule 84    addElif2 -> elifClause addElif
Rule 85    elifClause -> ELIF Condition Body
Rule 86    Condition -> RelationExpression
Rule 87    Condition -> LPAREN Condition Compound Condition RPAREN
Rule 88    Condition -> LPAREN NOT Condition RPAREN
Rule 89    Operand -> IDENTIFIER
Rule 90    Operand -> CONSTANT
Rule 91    Operand -> booleanValue
Rule 92    Operand -> FLOATVALUE
Rule 93    Operand -> LISTVALUE
Rule 94    Compound -> AND
Rule 95    Compound -> OR
Rule 96    Iterator -> PLUSPLUS
Rule 97    Iterator -> MINUSMINUS
Rule 98    Iterator -> EMPTY
Rule 99    AssignmentHead -> BAR IDENTIFIER AssignmentOption BAR SEMICOLON
Rule 100   AssignmentOption -> EQUAL AssignmentOptionChain
Rule 101   AssignmentOption -> AssignmentOperator AssignmentOptions2
Rule 102   AssignmentOptions2 -> CONSTANT
Rule 103   AssignmentOptions2 -> ArithmeticExpression
Rule 104   AssignmentOptionChain -> listEval
Rule 105   AssignmentOptionChain -> IDENTIFIER
Rule 106   AssignmentOptionChain -> Function
Rule 107   AssignmentOptionChain -> AssignmentOptions2
Rule 108   AssignmentOperator -> PLUSEQUAL
Rule 109   AssignmentOperator -> MINUSEQUAL
Rule 110   AssignmentOperator -> MULTEQUAL
Rule 111   AssignmentOperator -> DIVEQUAL
Rule 112   AssignmentOperator -> MODEQUAL
Rule 113   expression -> ArithmeticExpression
Rule 114   expression -> listEval
Rule 115   expression -> list
Rule 116   expression -> RelationExpression
Rule 117   RelationExpression -> LPAREN Operand RelationOperator Operand RPAREN
Rule 118   ArithmeticExpression -> LESSTHAN Operand ArithmeticOperator Operand GREATERTHAN
Rule 119   ArithmeticExpression -> LESSTHAN CONSTANT GREATERTHAN
Rule 120   ArithmeticOperator -> PLUS
Rule 121   ArithmeticOperator -> MINUS
Rule 122   ArithmeticOperator -> MULT
Rule 123   ArithmeticOperator -> DIV
Rule 124   ArithmeticOperator -> MOD
Rule 125   RelationOperator -> EQUALEQUAL
Rule 126   RelationOperator -> EQUAL
Rule 127   RelationOperator -> LESSTHAN
Rule 128   RelationOperator -> GREATERTHAN
Rule 129   RelationOperator -> GREATEREQ
Rule 130   RelationOperator -> LESSEREQ
Rule 131   RelationOperator -> NOTEQ
Rule 132   FunctionDefinition -> dataType Function COLON Body
Rule 133   Function -> IDENTIFIER LPAREN Parameter RPAREN
Rule 134   Parameter -> dataType IDENTIFIER
Rule 135   Parameter -> dataType IDENTIFIER COMMA Parameter
Rule 136   Parameter -> EMPTY
Rule 137   FunctionCall -> IDENTIFIER LPAREN FunctionCallParameter RPAREN SEMICOLON
Rule 138   FunctionCallParameter -> IDENTIFIER
Rule 139   FunctionCallParameter -> IDENTIFIER COMMA FunctionCallParameter
Rule 140   FunctionCallParameter -> EMPTY
Rule 141   returnDec -> RETURN CONSTANT SEMICOLON
Rule 142   returnDec -> RETURN IDENTIFIER SEMICOLON
Rule 143   returnDec -> RETURN expression SEMICOLON
Rule 144   returnDec -> RETURN SEMICOLON
Rule 145   booleanValue -> TRUE
Rule 146   booleanValue -> FALSE

Terminals, with rules where they appear

AND                  : 94
BAR                  : 41 41 42 42 43 43 44 44 58 58 99 99
BOOLEAN              : 46
COLON                : 71 132
COMMA                : 50 61 135 139
COMMENT              : 
CONCAT               : 56
CONSTANT             : 37 42 43 50 52 64 90 102 119 141
COPY                 : 57
DIV                  : 123
DIVEQUAL             : 111
ELIF                 : 85
ELSE                 : 83
EMPTY                : 35 53 62 98 136 140
END                  : 1 74
EQUAL                : 43 44 58 100 126
EQUALEQUAL           : 125
FALSE                : 146
FI                   : 82
FLOAT                : 47
FLOATVALUE           : 65 92
GREATEREQ            : 129
GREATERTHAN          : 118 119 128
IDENTIFIER           : 16 31 38 41 42 43 44 48 49 49 50 51 58 63 69 70 89 99 105 133 134 135 137 138 139 142
IF                   : 80
INSERT               : 50
INT                  : 45
KEYS                 : 
LBRACK               : 42 43 59
LESSEREQ             : 130
LESSTHAN             : 118 119 127
LISTVALUE            : 63 68 93
LPAREN               : 16 17 31 32 48 49 50 51 76 87 88 117 133 137
MINUS                : 121
MINUSEQUAL           : 109
MINUSMINUS           : 97
MOD                  : 124
MODEQUAL             : 112
MULT                 : 122
MULTEQUAL            : 110
NOT                  : 88
NOTEQ                : 131
OR                   : 95
PLUS                 : 34 120
PLUSEQUAL            : 108
PLUSPLUS             : 96
POP                  : 51
PRINT                : 17 32
RBRACK               : 42 43 59
READ                 : 16 31
RETURN               : 141 142 143 144
RPAREN               : 16 17 31 32 48 49 50 51 76 87 88 117 133 137
SEMICOLON            : 16 17 31 32 41 42 43 44 48 49 50 51 58 69 70 77 99 137 141 142 143 144
SPLIT                : 54
STRING               : 48
STRINGVALUE          : 36 67
STRIP                : 55
TC_FLOAT             : 70
TC_INT               : 69
TRUE                 : 145
WHILE                : 71
error                : 
for                  : 76

Nonterminals, with rules where they appear

ArithmeticExpression : 103 113
ArithmeticOperator   : 118
AssignmentHead       : 6 21 76
AssignmentOperator   : 79 101
AssignmentOption     : 99
AssignmentOptionChain : 100
AssignmentOptions2   : 101 107
Body                 : 71 76 80 83 85 132
Compound             : 87
Condition            : 71 76 80 85 87 87 88
ForLoop              : 8 23
Function             : 106 132
FunctionCall         : 12 27
FunctionCallParameter : 137 139
FunctionDefinition   : 11 26
IfThenElse           : 5 20
Increment            : 76
Iterator             : 78
Operand              : 77 79 117 117 118 118
Options              : 77
Parameter            : 133 135
RelationExpression   : 86 116
RelationOperator     : 117
WhileLoop            : 7 22
addElif              : 80 84
addElif2             : 81
booleanValue         : 66 91
content              : 17 32
dataType             : 41 42 43 44 132 134 135
declaration          : 3 18
elifClause           : 84
expression           : 4 19 43 44 143
identifierDeclaration : 39
list                 : 58 115
listDec              : 40
listElem             : 59 61
listEval             : 104 114
listOPStatement      : 15 30
listOpChoice         : 51
morePrint            : 33 34
returnDec            : 13 28
statement            : 2
statement1           : 75
statementMore        : 72 75
statementMoreCont    : 73
statementTop         : 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 30 0
stringOp             : 48 49
stringOpStatement    : 14 29
toPrint              : 33 34
typeCastToInt        : 9 24
typecastToFloat      : 10 25
validListUnionValues : 50 60 61

Parsing method: LALR

state 0

    (0) S' -> . statementTop
    (1) statementTop -> . END
    (2) statementTop -> . statement
    (3) statement -> . declaration statementTop
    (4) statement -> . expression statementTop
    (5) statement -> . IfThenElse statementTop
    (6) statement -> . AssignmentHead statementTop
    (7) statement -> . WhileLoop statementTop
    (8) statement -> . ForLoop statementTop
    (9) statement -> . typeCastToInt statementTop
    (10) statement -> . typecastToFloat statementTop
    (11) statement -> . FunctionDefinition statementTop
    (12) statement -> . FunctionCall statementTop
    (13) statement -> . returnDec statementTop
    (14) statement -> . stringOpStatement statementTop
    (15) statement -> . listOPStatement statementTop
    (16) statement -> . READ LPAREN IDENTIFIER RPAREN SEMICOLON statementTop
    (17) statement -> . PRINT LPAREN content RPAREN SEMICOLON statementTop
    (39) declaration -> . identifierDeclaration
    (40) declaration -> . listDec
    (113) expression -> . ArithmeticExpression
    (114) expression -> . listEval
    (115) expression -> . list
    (116) expression -> . RelationExpression
    (80) IfThenElse -> . IF Condition Body addElif
    (99) AssignmentHead -> . BAR IDENTIFIER AssignmentOption BAR SEMICOLON
    (71) WhileLoop -> . WHILE Condition COLON Body
    (76) ForLoop -> . for LPAREN AssignmentHead Condition Increment RPAREN Body
    (69) typeCastToInt -> . TC_INT IDENTIFIER SEMICOLON
    (70) typecastToFloat -> . TC_FLOAT IDENTIFIER SEMICOLON
    (132) FunctionDefinition -> . dataType Function COLON Body
    (137) FunctionCall -> . IDENTIFIER LPAREN FunctionCallParameter RPAREN SEMICOLON
    (141) returnDec -> . RETURN CONSTANT SEMICOLON
    (142) returnDec -> . RETURN IDENTIFIER SEMICOLON
    (143) returnDec -> . RETURN expression SEMICOLON
    (144) returnDec -> . RETURN SEMICOLON
    (48) stringOpStatement -> . IDENTIFIER stringOp LPAREN STRING RPAREN SEMICOLON
    (49) stringOpStatement -> . IDENTIFIER stringOp LPAREN IDENTIFIER RPAREN SEMICOLON
    (50) listOPStatement -> . IDENTIFIER INSERT LPAREN CONSTANT COMMA validListUnionValues RPAREN SEMICOLON
    (51) listOPStatement -> . IDENTIFIER POP LPAREN listOpChoice RPAREN SEMICOLON
    (41) identifierDeclaration -> . BAR dataType IDENTIFIER BAR SEMICOLON
    (42) identifierDeclaration -> . BAR dataType IDENTIFIER LBRACK CONSTANT RBRACK BAR SEMICOLON
    (43) identifierDeclaration -> . BAR dataType IDENTIFIER LBRACK CONSTANT RBRACK EQUAL expression BAR SEMICOLON
    (44) identifierDeclaration -> . BAR dataType IDENTIFIER EQUAL expression BAR SEMICOLON
    (58) listDec -> . BAR IDENTIFIER EQUAL list BAR SEMICOLON
    (118) ArithmeticExpression -> . LESSTHAN Operand ArithmeticOperator Operand GREATERTHAN
    (119) ArithmeticExpression -> . LESSTHAN CONSTANT GREATERTHAN
    (63) listEval -> . IDENTIFIER LISTVALUE
    (59) list -> . LBRACK listElem RBRACK
    (117) RelationExpression -> . LPAREN Operand RelationOperator Operand RPAREN
    (45) dataType -> . INT
    (46) dataType -> . BOOLEAN
    (47) dataType -> . FLOAT

    END             shift and go to state 18
    READ            shift and go to state 4
    PRINT           shift and go to state 7
    IF              shift and go to state 27
    BAR             shift and go to state 3
    WHILE           shift and go to state 5
    for             shift and go to state 30
    TC_INT          shift and go to state 9
    TC_FLOAT        shift and go to state 32
    IDENTIFIER      shift and go to state 15
    RETURN          shift and go to state 8
    LESSTHAN        shift and go to state 36
    LBRACK          shift and go to state 35
    LPAREN          shift and go to state 23
    INT             shift and go to state 31
    BOOLEAN         shift and go to state 26
    FLOAT           shift and go to state 33

    statementTop                   shift and go to state 1
    returnDec                      shift and go to state 2
    listDec                        shift and go to state 6
    typecastToFloat                shift and go to state 10
    IfThenElse                     shift and go to state 11
    AssignmentHead                 shift and go to state 12
    typeCastToInt                  shift and go to state 13
    statement                      shift and go to state 14
    FunctionDefinition             shift and go to state 16
    listEval                       shift and go to state 17
    dataType                       shift and go to state 19
    ArithmeticExpression           shift and go to state 20
    RelationExpression             shift and go to state 21
    identifierDeclaration          shift and go to state 22
    declaration                    shift and go to state 24
    ForLoop                        shift and go to state 25
    WhileLoop                      shift and go to state 28
    stringOpStatement              shift and go to state 29
    list                           shift and go to state 34
    listOPStatement                shift and go to state 37
    FunctionCall                   shift and go to state 38
    expression                     shift and go to state 39

state 1

    (0) S' -> statementTop .



state 2

    (13) statement -> returnDec . statementTop
    (1) statementTop -> . END
    (2) statementTop -> . statement
    (3) statement -> . declaration statementTop
    (4) statement -> . expression statementTop
    (5) statement -> . IfThenElse statementTop
    (6) statement -> . AssignmentHead statementTop
    (7) statement -> . WhileLoop statementTop
    (8) statement -> . ForLoop statementTop
    (9) statement -> . typeCastToInt statementTop
    (10) statement -> . typecastToFloat statementTop
    (11) statement -> . FunctionDefinition statementTop
    (12) statement -> . FunctionCall statementTop
    (13) statement -> . returnDec statementTop
    (14) statement -> . stringOpStatement statementTop
    (15) statement -> . listOPStatement statementTop
    (16) statement -> . READ LPAREN IDENTIFIER RPAREN SEMICOLON statementTop
    (17) statement -> . PRINT LPAREN content RPAREN SEMICOLON statementTop
    (39) declaration -> . identifierDeclaration
    (40) declaration -> . listDec
    (113) expression -> . ArithmeticExpression
    (114) expression -> . listEval
    (115) expression -> . list
    (116) expression -> . RelationExpression
    (80) IfThenElse -> . IF Condition Body addElif
    (99) AssignmentHead -> . BAR IDENTIFIER AssignmentOption BAR SEMICOLON
    (71) WhileLoop -> . WHILE Condition COLON Body
    (76) ForLoop -> . for LPAREN AssignmentHead Condition Increment RPAREN Body
    (69) typeCastToInt -> . TC_INT IDENTIFIER SEMICOLON
    (70) typecastToFloat -> . TC_FLOAT IDENTIFIER SEMICOLON
    (132) FunctionDefinition -> . dataType Function COLON Body
    (137) FunctionCall -> . IDENTIFIER LPAREN FunctionCallParameter RPAREN SEMICOLON
    (141) returnDec -> . RETURN CONSTANT SEMICOLON
    (142) returnDec -> . RETURN IDENTIFIER SEMICOLON
    (143) returnDec -> . RETURN expression SEMICOLON
    (144) returnDec -> . RETURN SEMICOLON
    (48) stringOpStatement -> . IDENTIFIER stringOp LPAREN STRING RPAREN SEMICOLON
    (49) stringOpStatement -> . IDENTIFIER stringOp LPAREN IDENTIFIER RPAREN SEMICOLON
    (50) listOPStatement -> . IDENTIFIER INSERT LPAREN CONSTANT COMMA validListUnionValues RPAREN SEMICOLON
    (51) listOPStatement -> . IDENTIFIER POP LPAREN listOpChoice RPAREN SEMICOLON
    (41) identifierDeclaration -> . BAR dataType IDENTIFIER BAR SEMICOLON
    (42) identifierDeclaration -> . BAR dataType IDENTIFIER LBRACK CONSTANT RBRACK BAR SEMICOLON
    (43) identifierDeclaration -> . BAR dataType IDENTIFIER LBRACK CONSTANT RBRACK EQUAL expression BAR SEMICOLON
    (44) identifierDeclaration -> . BAR dataType IDENTIFIER EQUAL expression BAR SEMICOLON
    (58) listDec -> . BAR IDENTIFIER EQUAL list BAR SEMICOLON
    (118) ArithmeticExpression -> . LESSTHAN Operand ArithmeticOperator Operand GREATERTHAN
    (119) ArithmeticExpression -> . LESSTHAN CONSTANT GREATERTHAN
    (63) listEval -> . IDENTIFIER LISTVALUE
    (59) list -> . LBRACK listElem RBRACK
    (117) RelationExpression -> . LPAREN Operand RelationOperator Operand RPAREN
    (45) dataType -> . INT
    (46) dataType -> . BOOLEAN
    (47) dataType -> . FLOAT

    END             shift and go to state 18
    READ            shift and go to state 4
    PRINT           shift and go to state 7
    IF              shift and go to state 27
    BAR             shift and go to state 3
    WHILE           shift and go to state 5
    for             shift and go to state 30
    TC_INT          shift and go to state 9
    TC_FLOAT        shift and go to state 32
    IDENTIFIER      shift and go to state 15
    RETURN          shift and go to state 8
    LESSTHAN        shift and go to state 36
    LBRACK          shift and go to state 35
    LPAREN          shift and go to state 23
    INT             shift and go to state 31
    BOOLEAN         shift and go to state 26
    FLOAT           shift and go to state 33

    statementTop                   shift and go to state 40
    returnDec                      shift and go to state 2
    listDec                        shift and go to state 6
    typecastToFloat                shift and go to state 10
    IfThenElse                     shift and go to state 11
    AssignmentHead                 shift and go to state 12
    typeCastToInt                  shift and go to state 13
    statement                      shift and go to state 14
    FunctionDefinition             shift and go to state 16
    listEval                       shift and go to state 17
    dataType                       shift and go to state 19
    ArithmeticExpression           shift and go to state 20
    RelationExpression             shift and go to state 21
    identifierDeclaration          shift and go to state 22
    declaration                    shift and go to state 24
    ForLoop                        shift and go to state 25
    WhileLoop                      shift and go to state 28
    stringOpStatement              shift and go to state 29
    list                           shift and go to state 34
    listOPStatement                shift and go to state 37
    FunctionCall                   shift and go to state 38
    expression                     shift and go to state 39

state 3

    (99) AssignmentHead -> BAR . IDENTIFIER AssignmentOption BAR SEMICOLON
    (41) identifierDeclaration -> BAR . dataType IDENTIFIER BAR SEMICOLON
    (42) identifierDeclaration -> BAR . dataType IDENTIFIER LBRACK CONSTANT RBRACK BAR SEMICOLON
    (43) identifierDeclaration -> BAR . dataType IDENTIFIER LBRACK CONSTANT RBRACK EQUAL expression BAR SEMICOLON
    (44) identifierDeclaration -> BAR . dataType IDENTIFIER EQUAL expression BAR SEMICOLON
    (58) listDec -> BAR . IDENTIFIER EQUAL list BAR SEMICOLON
    (45) dataType -> . INT
    (46) dataType -> . BOOLEAN
    (47) dataType -> . FLOAT

    IDENTIFIER      shift and go to state 42
    INT             shift and go to state 31
    BOOLEAN         shift and go to state 26
    FLOAT           shift and go to state 33

    dataType                       shift and go to state 41

state 4

    (16) statement -> READ . LPAREN IDENTIFIER RPAREN SEMICOLON statementTop

    LPAREN          shift and go to state 43


state 5

    (71) WhileLoop -> WHILE . Condition COLON Body
    (86) Condition -> . RelationExpression
    (87) Condition -> . LPAREN Condition Compound Condition RPAREN
    (88) Condition -> . LPAREN NOT Condition RPAREN
    (117) RelationExpression -> . LPAREN Operand RelationOperator Operand RPAREN

    LPAREN          shift and go to state 45

    RelationExpression             shift and go to state 44
    Condition                      shift and go to state 46

state 6

    (40) declaration -> listDec .

    END             reduce using rule 40 (declaration -> listDec .)
    READ            reduce using rule 40 (declaration -> listDec .)
    PRINT           reduce using rule 40 (declaration -> listDec .)
    IF              reduce using rule 40 (declaration -> listDec .)
    BAR             reduce using rule 40 (declaration -> listDec .)
    WHILE           reduce using rule 40 (declaration -> listDec .)
    for             reduce using rule 40 (declaration -> listDec .)
    TC_INT          reduce using rule 40 (declaration -> listDec .)
    TC_FLOAT        reduce using rule 40 (declaration -> listDec .)
    IDENTIFIER      reduce using rule 40 (declaration -> listDec .)
    RETURN          reduce using rule 40 (declaration -> listDec .)
    LESSTHAN        reduce using rule 40 (declaration -> listDec .)
    LBRACK          reduce using rule 40 (declaration -> listDec .)
    LPAREN          reduce using rule 40 (declaration -> listDec .)
    INT             reduce using rule 40 (declaration -> listDec .)
    BOOLEAN         reduce using rule 40 (declaration -> listDec .)
    FLOAT           reduce using rule 40 (declaration -> listDec .)


state 7

    (17) statement -> PRINT . LPAREN content RPAREN SEMICOLON statementTop

    LPAREN          shift and go to state 47


state 8

    (141) returnDec -> RETURN . CONSTANT SEMICOLON
    (142) returnDec -> RETURN . IDENTIFIER SEMICOLON
    (143) returnDec -> RETURN . expression SEMICOLON
    (144) returnDec -> RETURN . SEMICOLON
    (113) expression -> . ArithmeticExpression
    (114) expression -> . listEval
    (115) expression -> . list
    (116) expression -> . RelationExpression
    (118) ArithmeticExpression -> . LESSTHAN Operand ArithmeticOperator Operand GREATERTHAN
    (119) ArithmeticExpression -> . LESSTHAN CONSTANT GREATERTHAN
    (63) listEval -> . IDENTIFIER LISTVALUE
    (59) list -> . LBRACK listElem RBRACK
    (117) RelationExpression -> . LPAREN Operand RelationOperator Operand RPAREN

    CONSTANT        shift and go to state 48
    IDENTIFIER      shift and go to state 50
    SEMICOLON       shift and go to state 49
    LESSTHAN        shift and go to state 36
    LBRACK          shift and go to state 35
    LPAREN          shift and go to state 23

    listEval                       shift and go to state 17
    list                           shift and go to state 34
    ArithmeticExpression           shift and go to state 20
    RelationExpression             shift and go to state 21
    expression                     shift and go to state 51

state 9

    (69) typeCastToInt -> TC_INT . IDENTIFIER SEMICOLON

    IDENTIFIER      shift and go to state 52


state 10

    (10) statement -> typecastToFloat . statementTop
    (1) statementTop -> . END
    (2) statementTop -> . statement
    (3) statement -> . declaration statementTop
    (4) statement -> . expression statementTop
    (5) statement -> . IfThenElse statementTop
    (6) statement -> . AssignmentHead statementTop
    (7) statement -> . WhileLoop statementTop
    (8) statement -> . ForLoop statementTop
    (9) statement -> . typeCastToInt statementTop
    (10) statement -> . typecastToFloat statementTop
    (11) statement -> . FunctionDefinition statementTop
    (12) statement -> . FunctionCall statementTop
    (13) statement -> . returnDec statementTop
    (14) statement -> . stringOpStatement statementTop
    (15) statement -> . listOPStatement statementTop
    (16) statement -> . READ LPAREN IDENTIFIER RPAREN SEMICOLON statementTop
    (17) statement -> . PRINT LPAREN content RPAREN SEMICOLON statementTop
    (39) declaration -> . identifierDeclaration
    (40) declaration -> . listDec
    (113) expression -> . ArithmeticExpression
    (114) expression -> . listEval
    (115) expression -> . list
    (116) expression -> . RelationExpression
    (80) IfThenElse -> . IF Condition Body addElif
    (99) AssignmentHead -> . BAR IDENTIFIER AssignmentOption BAR SEMICOLON
    (71) WhileLoop -> . WHILE Condition COLON Body
    (76) ForLoop -> . for LPAREN AssignmentHead Condition Increment RPAREN Body
    (69) typeCastToInt -> . TC_INT IDENTIFIER SEMICOLON
    (70) typecastToFloat -> . TC_FLOAT IDENTIFIER SEMICOLON
    (132) FunctionDefinition -> . dataType Function COLON Body
    (137) FunctionCall -> . IDENTIFIER LPAREN FunctionCallParameter RPAREN SEMICOLON
    (141) returnDec -> . RETURN CONSTANT SEMICOLON
    (142) returnDec -> . RETURN IDENTIFIER SEMICOLON
    (143) returnDec -> . RETURN expression SEMICOLON
    (144) returnDec -> . RETURN SEMICOLON
    (48) stringOpStatement -> . IDENTIFIER stringOp LPAREN STRING RPAREN SEMICOLON
    (49) stringOpStatement -> . IDENTIFIER stringOp LPAREN IDENTIFIER RPAREN SEMICOLON
    (50) listOPStatement -> . IDENTIFIER INSERT LPAREN CONSTANT COMMA validListUnionValues RPAREN SEMICOLON
    (51) listOPStatement -> . IDENTIFIER POP LPAREN listOpChoice RPAREN SEMICOLON
    (41) identifierDeclaration -> . BAR dataType IDENTIFIER BAR SEMICOLON
    (42) identifierDeclaration -> . BAR dataType IDENTIFIER LBRACK CONSTANT RBRACK BAR SEMICOLON
    (43) identifierDeclaration -> . BAR dataType IDENTIFIER LBRACK CONSTANT RBRACK EQUAL expression BAR SEMICOLON
    (44) identifierDeclaration -> . BAR dataType IDENTIFIER EQUAL expression BAR SEMICOLON
    (58) listDec -> . BAR IDENTIFIER EQUAL list BAR SEMICOLON
    (118) ArithmeticExpression -> . LESSTHAN Operand ArithmeticOperator Operand GREATERTHAN
    (119) ArithmeticExpression -> . LESSTHAN CONSTANT GREATERTHAN
    (63) listEval -> . IDENTIFIER LISTVALUE
    (59) list -> . LBRACK listElem RBRACK
    (117) RelationExpression -> . LPAREN Operand RelationOperator Operand RPAREN
    (45) dataType -> . INT
    (46) dataType -> . BOOLEAN
    (47) dataType -> . FLOAT

    END             shift and go to state 18
    READ            shift and go to state 4
    PRINT           shift and go to state 7
    IF              shift and go to state 27
    BAR             shift and go to state 3
    WHILE           shift and go to state 5
    for             shift and go to state 30
    TC_INT          shift and go to state 9
    TC_FLOAT        shift and go to state 32
    IDENTIFIER      shift and go to state 15
    RETURN          shift and go to state 8
    LESSTHAN        shift and go to state 36
    LBRACK          shift and go to state 35
    LPAREN          shift and go to state 23
    INT             shift and go to state 31
    BOOLEAN         shift and go to state 26
    FLOAT           shift and go to state 33

    statementTop                   shift and go to state 53
    returnDec                      shift and go to state 2
    listDec                        shift and go to state 6
    typecastToFloat                shift and go to state 10
    IfThenElse                     shift and go to state 11
    AssignmentHead                 shift and go to state 12
    typeCastToInt                  shift and go to state 13
    statement                      shift and go to state 14
    FunctionDefinition             shift and go to state 16
    listEval                       shift and go to state 17
    dataType                       shift and go to state 19
    ArithmeticExpression           shift and go to state 20
    RelationExpression             shift and go to state 21
    identifierDeclaration          shift and go to state 22
    declaration                    shift and go to state 24
    ForLoop                        shift and go to state 25
    WhileLoop                      shift and go to state 28
    stringOpStatement              shift and go to state 29
    list                           shift and go to state 34
    listOPStatement                shift and go to state 37
    FunctionCall                   shift and go to state 38
    expression                     shift and go to state 39

state 11
